# axum_mongo_example

./: .env.example  Cargo.toml  Dockerfile  compose.yml
src/: main.rs  routes.rs
src/config/: mod.rs
src/dto/: car.rs  user.rs
src/handler/: car.rs  health.rs  mod.rs  openapi.rs  user.rs
src/libs/: db.rs
src/model/: car.rs  user.rs
src/state/: mod.rs
src/utils/: mongo.rs
static/swagger-ui/: index.html
