[package]
name = "axum_mongo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "http2"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["uuid"]}
mongodb = { version = "2.5.0", features = ["tokio-runtime"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
dotenvy = "0.15.0"
futures-util = "0.3.32"